# JoyDataForge

./: .all-contributorsrc  .gitignore  LICENSE  README-EN.md  README.md  pyproject.toml
datas/agent_intent/: embeddings_examples.json  examples.json
datas/cdss_datas/: examples.jsonl
datas/wizard_instruction/: example.jsonl
examples/cdss_agent/: cdss_agent_pipline.py
examples/data_sample_and_quality_evaluate/: data_sampling_and_evaluate.py
examples/dpo_synth/: dpo_synth.py  model_args_parser.py
examples/magpie_synth/: magpie_ins_res_synth.py
examples/model_votes/: model_votes_and_pipline.py
examples/wizard_synth/: wizard_query_synth.py
results/cdss_datas/: cdss_agent_data_synth.json  cdss_agent_data_synth.json_post_binary.json  test_dataset_v_0_2_middle.xlsx  train_dataset_v_0_2_middle.json  孕期孕周.json  药品.json
results/cdss_datas_with_votes_post_processing/: cdss_agent_data_synth.json_cdss_multi_model_vote_and_post_labeling.json
results/data_select_and_evaluation/: evaluation_res.json  k_center_selected_10.json  random_selected_10.json
results/wizard_instruction/: wizard_evolution_data_synth.json_wizard.json
src/joydataforge/components/filter/: k_center_greedy.py  mini_hash.py  sampling_def.py
src/joydataforge/components/loader/: data_load_and_process.py
src/joydataforge/components/score/: data_evaluation.py  data_sampling.py  (+2 more)
src/joydataforge/config/: __init__.py  magpie_model_templates.json  model.yaml  prompt.yaml
src/joydataforge/models/: llm.py
src/joydataforge/utils/: dialog_sample_by_round.py  file.py  parse_response.py
(+5 files in other folders)
